--- a/Changes
+++ b/Changes
@@ -1,7 +1,12 @@
 Revision history for Perl extension HTML::Calendar::Simple.
 
+0.04 Sat Mar 16 14:05:00 2002
+        - Changed calendar_year interface, so can include a pin-up 
+          and link on any day in any month. Deprecated html call
+          in favour of name change to calendar_month
+
 0.03  Fri Mar 15 9:00:00 2002
-        - Added pin_up,m calendar_year and some doc changes.
+        - Added pin_up, calendar_year and some doc changes.
 
 0.02  Thu Mar 14 10:10:00 2002
         - Added CGI and Test::More to prerequisites.
